# grepsense

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
charts/grepsense/: Chart.yaml  values.yaml
charts/grepsense/files/: index-repos.sh
charts/grepsense/templates/: _helpers.tpl  configmap-zoekt-indexer.yaml  deployments.yaml  pvc.yaml  services.yaml
devel/: incremental-embedding-plan.md
docs/: architecture.md  install.md
grepsense/: __init__.py  chunker.py  cli.py  config.py  discovery.py  gitchanges.py  incremental.py  lock.py  semantic.py  server.py  state.py
tests/: conftest.py  helpers.py  test_chunker_flush.py  test_chunker_incremental.py  test_cli.py  test_gitchanges.py  test_health.py  test_incremental.py  test_lock.py  test_state.py
tests/e2e/: run.sh
tests/e2e/fixture/demo-repo/: hello.py
zoekt/: Dockerfile  index-repos.sh  zoekt-ignore  zoekt.env
zoekt/patches/: 0001-add-ignore-file-flag.sh  apply-patches.sh
