[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grepsense"
version = "0.2.0"
description = "Two-modal code search (lexical + semantic) for AI coding agents, over MCP."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Vasile Alaiba" }]
keywords = [
    "mcp", "code-search", "semantic-search", "zoekt", "chromadb",
    "embeddings", "ai-agents", "llm", "rag",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
    "starlette>=0.27",
    "chromadb>=1.0",
    "sentence-transformers>=3.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8",
    "chromadb>=1.0",
]

[project.urls]
Homepage = "https://github.com/alaiba/grepsense"
Repository = "https://github.com/alaiba/grepsense"
Issues = "https://github.com/alaiba/grepsense/issues"

[project.scripts]
grepsense = "grepsense.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["grepsense"]

[tool.pytest.ini_options]
pythonpath = ["."]
